<resources>
    <string name="app_name">MovieBoxBeta</string>
    <string name="tab_text_1">Popular</string>
    <string name="tab_text_2">TopRated</string>
    <string name="tab_text_3">Upcoming</string>
    <string name="tab_text_4">Now Playing</string>
    <string name="tab_text_5">Latest</string>

    <string name="API_KEY">ab6da60052ca37ee47ea2b3ef44ce07d</string>
    <string name="baseURL">https://api.themoviedb.org/3/movie/</string>
    <string name="imageURL">https://image.tmdb.org/t/p/w500</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Movie Box</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Movies Categories</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="latest">Latest</string>
    <string name="playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="favorite">Favorite</string>

    <string name="title_activity_fullscreen_splash">FullscreenSplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
